# 2025_Python_SIE_playground

./: .gitignore  README.md  pyproject.toml  test.py
doc/data_processing/: batch_creator.py
doc/data_processing/data/: data_example_no_headers.csv
doc/demos/: curve_fitting.py  decorator.py
src/dataproc/: core.py
src/demos/: data.csv  data_creation.py  plotter.py  recognize_amplitude_frequence.py
tests/: test.py  test_say_hi.py
